--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <title>acme frontend</title>
     </head>
     <body>
-        <div id="root"</div>
+        <div id="app-target"</div>
         <script src="/js/main.js"></script>
     </body>
 </html>
